Add a dash of bitters

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,6 +21,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "bourbon";
 @import "utilities/variables/index";
 @import "neat";
+@import "base";
 @import "utilities/mixins/index";
 
 @import "base/index";
