Add basic header nav

--- a/sass/modules/_navigation.scss
+++ b/sass/modules/_navigation.scss
@@ -6,7 +6,6 @@
 
 a {
 	color: $color-link;
-
 	&:visited {
 		color: $color-link-visited;
 	}
@@ -33,10 +32,9 @@ a {
 }
 
 // Main navigation (after creating a menu in the dashboard)
-
 .main-navigation {
 	@include size(100% auto);
-
+	$nav-height: 4em;
 	clear: both;
 	display: block;
 	float: left;
@@ -46,63 +44,36 @@ a {
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
-
-		// Sub-menu
-		ul {
-			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-			float: left;
-			left: -999em;
-			position: absolute;
-			top: em(24px);
-			z-index: 99999;
-
-			// Sub-sub menu
-			ul {
-				left: -999em;
-				top: 0;
-			}
-
-			// Sub-menu items
-			li {
-
-				&:hover > ul {
-					left: 100%;
-				}
-			}
-
-			:hover > a {
-			}
-
-			a:hover {
-			}
-		}
-
-		// Sub-menu links
-		a {
-			@include size(200px auto);
-		}
-
-		// Display sub-menu on hover
-		li:hover > ul {
-			left: auto;
-		}
+		text-align: center;
 	}
 
 	// Menu items
 	li {
-		float: left;
-		position: relative;
-
+		display: inline;
+		text-align: center;
+		width: 100%;
+		line-height: $nav-height;
 		&:hover > a {
 		}
 	}
 
 	// Menu hyperlinks
 	a {
-		display: block;
+		display: inline-block;
 		text-decoration: none;
+		text-transform: uppercase;
+		color: $color-link-header;
+		width: $nav-height*3;
+		@include header-font;
 	}
 
+	// Menu logo
+	.menu-item-home a {
+		background: url("images/logo-lt-blue.svg") no-repeat center center;
+		background-size: auto $nav-height*0.7; 
+		color: transparent;
+		text-indent: -9999px;
+	}
 	// Current items
 	.current_page_item a,
 	.current-menu-item a {
@@ -111,17 +82,20 @@ a {
 
 // Small menu
 
-.menu-toggle {
+.menu-toggle, 
+.mobile-logo {
 	display: none;
 }
 
 @media screen and (max-width: 600px) {
 	.menu-toggle,
+	.mobile-logo,
 	.main-navigation.toggled .nav-menu {
 		display: block;
 	}
 
-	.main-navigation ul {
+	.main-navigation ul,
+	.main-navigation li.menu-item-home {
 		display: none;
 	}
 }
