--- a/sass/structure/_layout.scss
+++ b/sass/structure/_layout.scss
@@ -1,10 +1,9 @@
-//--------------------------------------------------------------
-// Base Layout
+//-------------------------------------------------------------- // Base Layout
 //--------------------------------------------------------------*/
 
 // Structure
 
-.site {
+.container {
 	@include outer-container;
 }
 
