--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: reachsupply
-Theme URI: http://underscores.me/
-Author: Automattic
-Author URI: http://automattic.com/
-Description: Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.
+Theme URI: http://reachsupply.com/
+Author: Luke Gaudreau
+Author URI: http://reachsupply.com/
+Description: A theme based on wd_s
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -17,6 +17,13 @@ Based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
+
+@font-face {
+	font-family: "League Spartan";
+	font-style: normal;
+	font-weight: normal;
+	src: url("fonts/leaguespartan-bold.woff2") format("woff2"), url("fonts/leaguespartan-bold.woff") format("woff");
+}
 
 /* line 4, /home/luke/Sites/www/reachsupply/htdocs/wp-content/themes/reachsupply/bower_components/neat/app/assets/stylesheets/grid/_box-sizing.scss */
 
@@ -1103,19 +1110,25 @@ img {
 	margin-bottom: 1.5em;
 }
 
+/* line 15, sass/modules/_header.scss */
+
+.site-header {
+	background-color: #0B486B;
+}
+
 /* line 7, sass/modules/_navigation.scss */
 
 a {
 	color: royalblue;
 }
 
-/* line 10, sass/modules/_navigation.scss */
+/* line 9, sass/modules/_navigation.scss */
 
 a:visited {
 	color: purple;
 }
 
-/* line 14, sass/modules/_navigation.scss */
+/* line 13, sass/modules/_navigation.scss */
 
 a:hover,
 a:focus,
@@ -1123,13 +1136,13 @@ a:active {
 	color: midnightblue;
 }
 
-/* line 27, sass/modules/_navigation.scss */
+/* line 26, sass/modules/_navigation.scss */
 
 .menu ul li {
 	margin: 0 10px 0 0;
 }
 
-/* line 37, sass/modules/_navigation.scss */
+/* line 35, sass/modules/_navigation.scss */
 
 .main-navigation {
 	height: auto;
@@ -1139,72 +1152,54 @@ a:active {
 	float: left;
 }
 
-/* line 45, sass/modules/_navigation.scss */
+/* line 43, sass/modules/_navigation.scss */
 
 .main-navigation ul {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
+	text-align: center;
 }
 
 /* line 51, sass/modules/_navigation.scss */
 
-.main-navigation ul ul {
-	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-	float: left;
-	left: -999em;
-	position: absolute;
-	top: 1.5em;
-	z-index: 99999;
-}
-
-/* line 60, sass/modules/_navigation.scss */
-
-.main-navigation ul ul ul {
-	left: -999em;
-	top: 0;
-}
-
-/* line 68, sass/modules/_navigation.scss */
-
-.main-navigation ul ul li:hover > ul {
-	left: 100%;
-}
-
-/* line 81, sass/modules/_navigation.scss */
-
-.main-navigation ul a {
-	height: auto;
-	width: 200px;
-}
-
-/* line 86, sass/modules/_navigation.scss */
-
-.main-navigation ul li:hover > ul {
-	left: auto;
-}
-
-/* line 92, sass/modules/_navigation.scss */
-
 .main-navigation li {
-	float: left;
-	position: relative;
+	display: inline;
+	text-align: center;
+	width: 100%;
+	line-height: 4em;
 }
 
-/* line 101, sass/modules/_navigation.scss */
+/* line 61, sass/modules/_navigation.scss */
 
 .main-navigation a {
-	display: block;
+	display: inline-block;
 	text-decoration: none;
+	text-transform: uppercase;
+	color: #FFFBEB;
+	width: 12em;
+	font-family: "League Spartan";
+	font-weight: normal;
+	letter-spacing: 0.2em;
 }
 
-/* line 114, sass/modules/_navigation.scss */
+/* line 71, sass/modules/_navigation.scss */
 
-.menu-toggle {
+.main-navigation .menu-item-home a {
+	background: url("images/logo-lt-blue.svg") no-repeat center center;
+	background-size: auto 2.8em;
+	color: transparent;
+	text-indent: -9999px;
+}
+
+/* line 85, sass/modules/_navigation.scss */
+
+.menu-toggle,
+.mobile-logo {
 	display: none;
 }
 
-/* line 133, sass/modules/_navigation.scss */
+/* line 107, sass/modules/_navigation.scss */
 
 .site-main .comment-navigation,
 .site-main
@@ -1215,7 +1210,7 @@ a:active {
 	overflow: hidden;
 }
 
-/* line 138, sass/modules/_navigation.scss */
+/* line 112, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
@@ -1225,7 +1220,7 @@ a:active {
 	float: left;
 }
 
-/* line 144, sass/modules/_navigation.scss */
+/* line 118, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
@@ -1477,9 +1472,9 @@ Infinite scroll
 	display: block;
 }
 
-/* line 7, sass/structure/_layout.scss */
+/* line 6, sass/structure/_layout.scss */
 
-.site {
+.container {
 	max-width: 85.375em;
 	margin-left: auto;
 	margin-right: auto;
@@ -1487,25 +1482,25 @@ Infinite scroll
 
 /* line 20, /home/luke/Sites/www/reachsupply/htdocs/wp-content/themes/reachsupply/bower_components/bourbon/app/assets/stylesheets/addons/_clearfix.scss */
 
-.site::after {
+.container::after {
 	clear: both;
 	content: "";
 	display: table;
 }
 
-/* line 11, sass/structure/_layout.scss */
+/* line 10, sass/structure/_layout.scss */
 
 .site-content {
 	margin: 20px auto;
 }
 
-/* line 19, sass/structure/_layout.scss */
+/* line 18, sass/structure/_layout.scss */
 
 #primary {
 	width: 100%;
 }
 
-/* line 27, sass/structure/_layout.scss */
+/* line 26, sass/structure/_layout.scss */
 
 #secondary {
 	width: 100%;
@@ -1531,13 +1526,13 @@ Infinite scroll
 
 @media (min-width: 85.375em) {
 
-/* line 11, sass/structure/_layout.scss */
+/* line 10, sass/structure/_layout.scss */
 
 .site-content {
 	margin: 40px auto 60px;
 }
 
-/* line 19, sass/structure/_layout.scss */
+/* line 18, sass/structure/_layout.scss */
 
 #primary {
 	float: left;
@@ -1552,7 +1547,7 @@ Infinite scroll
 	margin-right: 0;
 }
 
-/* line 27, sass/structure/_layout.scss */
+/* line 26, sass/structure/_layout.scss */
 
 #secondary {
 	float: left;
@@ -1572,16 +1567,18 @@ Infinite scroll
 
 @media screen and (max-width: 600px) {
 
-/* line 119, sass/modules/_navigation.scss */
+/* line 91, sass/modules/_navigation.scss */
 
 .menu-toggle,
+.mobile-logo,
 .main-navigation.toggled .nav-menu {
 	display: block;
 }
 
-/* line 124, sass/modules/_navigation.scss */
+/* line 97, sass/modules/_navigation.scss */
 
-.main-navigation ul {
+.main-navigation ul,
+.main-navigation li.menu-item-home {
 	display: none;
 }
 
