Adjust basic typography and text colors

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,7 +8,7 @@ input,
 select,
 textarea {
 	color: $color-text-main;
-	font-family: $font-sans;
+	font-family: $font-serif;
 	line-height: $line-height-body;
 }
 
