--- a/sass/utilities/variables/_typography.scss
+++ b/sass/utilities/variables/_typography.scss
@@ -3,9 +3,10 @@
 // -------------------------------------------------------------
 
 @include font-face("League Spartan", "fonts/leaguespartan-bold", $file-formats: woff2 woff);
+
 $font-header: "League Spartan";
 $font-sans:  "Open Sans", sans-serif;
-$font-serif: Roboto, Georgia, Times, "Times New Roman", serif;
+$font-serif: Georgia, Times, "Times New Roman", serif;
 $font-code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font-pre: "Courier 10 Pitch", Courier, monospace;
 $font-icon: "FontAwesome";
