--- a/style.css
+++ b/style.css
@@ -700,8 +700,8 @@ button,
 input,
 select,
 textarea {
-	color: #404040;
-	font-family: "Open Sans", sans-serif;
+	color: #341127;
+	font-family: Georgia, Times, "Times New Roman", serif;
 	line-height: 1.5;
 }
 
@@ -1119,13 +1119,13 @@ img {
 /* line 7, sass/modules/_navigation.scss */
 
 a {
-	color: royalblue;
+	color: #42839B;
 }
 
 /* line 9, sass/modules/_navigation.scss */
 
 a:visited {
-	color: purple;
+	color: #0B486B;
 }
 
 /* line 13, sass/modules/_navigation.scss */
@@ -1133,7 +1133,7 @@ a:visited {
 a:hover,
 a:focus,
 a:active {
-	color: midnightblue;
+	color: #0B486B;
 }
 
 /* line 26, sass/modules/_navigation.scss */
