--- a/sass/modules/_content.scss
+++ b/sass/modules/_content.scss
@@ -7,6 +7,13 @@
 .entry-title {
 	font-size: rem(36);
 	word-wrap: break-word;
+	text-align: center;
+	a {
+		color: $color-text-main;
+		&:hover {
+			color: $color-link-hover;
+		}
+	}
 }
 
 .sticky {
