--- a/sass/modules/_navigation.scss
+++ b/sass/modules/_navigation.scss
@@ -62,6 +62,7 @@ a {
 		display: inline-block;
 		text-decoration: none;
 		text-transform: uppercase;
+		letter-spacing: 0.2em;
 		color: $color-link-header;
 		width: $nav-height*3;
 		@include header-font;
