--- a/sass/structure/_layout.scss
+++ b/sass/structure/_layout.scss
@@ -23,11 +23,22 @@
 	}
 }
 
-#secondary {
+
+.site-footer {
+	@include clearfix;
+	.menu {
+		display: none;
+	}
+
+	#secondary {
+	@include margin (20px auto);
+		@include wider-than(desktop) {
+		@include margin(40px auto 60px);
+	}
 	@include fill-parent;
 
 	@include wider-than(desktop) {
-		@include span-columns(4);
-		@include omega();
+		@include span-columns(12);
 	}
+}
 }
