Add home page template and styles

--- a/sass/utilities/variables/_colors.scss
+++ b/sass/utilities/variables/_colors.scss
@@ -10,6 +10,7 @@ $red: #80061C;
 
 $color-background-header: $dark-blue;
 $color-background-body: #fff;
+$color-background-home: $light-blue;
 $color-background-screen-reader: #f1f1f1;
 $color-background-hr: #ccc;
 $color-background-button: #e6e6e6;
@@ -22,6 +23,7 @@ $color-text-screen-reader: #21759b;
 $color-text-input: #666;
 $color-text-input-focus: #111;
 $color-text-footer: $ivory;
+$color-text-home: $ivory;
 $color-link: $light-blue;
 $color-link-visited: $dark-blue;
 $color-link-hover: $dark-blue;
@@ -34,3 +36,5 @@ $color-border-button-hover: #ccc #bbb #aaa;
 $color-border-button-focus: #aaa #bbb #bbb;
 $color-border-input: #ccc;
 $color-border-abbr: #666;
+
+$color-button-home: $dark-blue;
