--- a/sass/modules/_navigation.scss
+++ b/sass/modules/_navigation.scss
@@ -32,13 +32,14 @@ a {
 }
 
 // Main navigation (after creating a menu in the dashboard)
-.main-navigation {
-	@include size(100% auto);
+.nav-wrapper {
 	$nav-height: 4em;
+	.main-navigation {
+@include size(100% auto);
 	clear: both;
 	display: block;
 	float: left;
-
+	}
 	// Menu area
 	ul {
 		list-style: none;
