--- a/sass/modules/_home.scss
+++ b/sass/modules/_home.scss
@@ -2,9 +2,15 @@
 
 .home {
 	background-color: $color-background-home;
-	.site-content {
-		margin-top: 10%;
-		margin-bottom: 0;
+	.site-header-logo > h1 {
+		margin: 35% 0 0 0;
+		font-size: 2em;
+		a {
+		background-image: url("images/logo-ivory.svg");
+		padding: 6.25em 0 0 0.1em;
+		background-size: 9.75em;
+		color: $color-text-home;
+		}
 	}
 	p {
 		color: $color-text-home;
@@ -13,17 +19,10 @@
 		font-size: 2em;
 		text-align: center;
 		text-shadow: 0px 2px 2px darken($color-background-home, 10%);
+		margin-top: -3em;
 	}
-	h1 {
-		text-transform: uppercase;
-		color: $color-text-home;
-		letter-spacing: 0.2em;
-		margin: 0;
-		background-image: url("images/logo-ivory.svg");
-		background-position: top center; 
-		background-repeat: no-repeat;
-		padding-top: 6.5em;
-		background-size: 10em;
+	.entry-title {
+		display:none
 	}
 	.site-header {
 		background-color: $color-background-home;
@@ -31,8 +30,12 @@
 	.entry-content, .hentry {
 		margin: 0;
 	}
+	.site-header > nav {
+		background-color: transparent;
+	}
 	.main-navigation {
 		@include outer-container;
+		padding-top: 3em;
 	}
 	ul {
 		text-align: center;
