--- a/sass/modules/_navigation.scss
+++ b/sass/modules/_navigation.scss
@@ -35,10 +35,10 @@ a {
 .nav-wrapper {
 	$nav-height: 4em;
 	.main-navigation {
-@include size(100% auto);
-	clear: both;
-	display: block;
-	float: left;
+		@include size(100% auto);
+		clear: both;
+		display: block;
+		float: left;
 	}
 	// Menu area
 	ul {
@@ -71,8 +71,6 @@ a {
 
 	// Menu logo
 	.menu-item-home a {
-		background: url("images/logo-lt-blue.svg") no-repeat center center;
-		background-size: auto $nav-height*0.7; 
 		color: transparent;
 		text-indent: -9999px;
 	}
@@ -81,17 +79,26 @@ a {
 	.current-menu-item a {
 	}
 }
-
+// Sticky nav
+.anchor {
+	&.anchor-moved {
+		position: fixed;
+		top: 0;
+		.menu-item-home {
+			background: url("images/logo-lt-blue.svg") no-repeat center center;
+			background-size: auto 3em; 
+			padding: 1em 0 1em 0;
+		}
+	}
+}
 // Small menu
 
-.menu-toggle, 
-.mobile-logo {
+.menu-toggle {
 	display: none;
 }
 
 @media screen and (max-width: 600px) {
 	.menu-toggle,
-	.mobile-logo,
 	.main-navigation.toggled .nav-menu {
 		display: block;
 	}
