--- a/sass/modules/_home.scss
+++ b/sass/modules/_home.scss
@@ -59,3 +59,12 @@
 		display: none;
 	}
 }
+
+@media screen and (max-width: 600px) {
+	.home {
+	.site-header-logo > h1 {
+		margin: 35% 0 0 0;
+		font-size: 2em;
+}
+}
+}
