--- a/style.css
+++ b/style.css
@@ -1202,26 +1202,32 @@ a:active {
 	text-transform: uppercase;
 	letter-spacing: 0.2em;
 	color: #FFFBEB;
-	width: 12em;
+	width: 8em;
 	font-family: "League Spartan";
 	font-weight: normal;
 }
 
-/* line 73, sass/modules/_navigation.scss */
+/* line 70, sass/modules/_navigation.scss */
+
+.nav-wrapper a.menu-toggle {
+	display: none;
+}
+
+/* line 80, sass/modules/_navigation.scss */
 
 .nav-wrapper .menu-item-home a {
 	color: transparent;
 	text-indent: -9999px;
 }
 
-/* line 84, sass/modules/_navigation.scss */
+/* line 91, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved {
 	position: fixed;
 	top: 0;
 }
 
-/* line 87, sass/modules/_navigation.scss */
+/* line 94, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved .menu-item-home {
 	background: url("images/logo-lt-blue.svg") no-repeat center center;
@@ -1229,13 +1235,7 @@ a:active {
 	padding: 1em 0 1em 0;
 }
 
-/* line 96, sass/modules/_navigation.scss */
-
-.menu-toggle {
-	display: none;
-}
-
-/* line 116, sass/modules/_navigation.scss */
+/* line 129, sass/modules/_navigation.scss */
 
 .site-main .comment-navigation,
 .site-main
@@ -1246,7 +1246,7 @@ a:active {
 	overflow: hidden;
 }
 
-/* line 121, sass/modules/_navigation.scss */
+/* line 134, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
@@ -1256,7 +1256,7 @@ a:active {
 	float: left;
 }
 
-/* line 127, sass/modules/_navigation.scss */
+/* line 140, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
@@ -1287,33 +1287,33 @@ a:active {
 	color: #0B486B;
 }
 
-/* line 19, sass/modules/_content.scss */
+/* line 23, sass/modules/_content.scss */
 
 .sticky {
 	display: block;
 }
 
-/* line 23, sass/modules/_content.scss */
+/* line 27, sass/modules/_content.scss */
 
 .hentry {
 	margin: 0 0 24px;
 }
 
-/* line 27, sass/modules/_content.scss */
+/* line 31, sass/modules/_content.scss */
 
 .byline,
 .updated:not(.published) {
 	display: none;
 }
 
-/* line 32, sass/modules/_content.scss */
+/* line 36, sass/modules/_content.scss */
 
 .single .byline,
 .group-blog .byline {
 	display: inline;
 }
 
-/* line 37, sass/modules/_content.scss */
+/* line 41, sass/modules/_content.scss */
 
 .page-content,
 .entry-content,
@@ -1321,20 +1321,20 @@ a:active {
 	margin: 24px 0 0;
 }
 
-/* line 43, sass/modules/_content.scss */
+/* line 47, sass/modules/_content.scss */
 
 .page-links {
 	margin: 0 0 24px;
 	clear: both;
 }
 
-/* line 49, sass/modules/_content.scss */
+/* line 53, sass/modules/_content.scss */
 
 .edit-link {
 	margin: 0 24px;
 }
 
-/* line 55, sass/modules/_content.scss */
+/* line 59, sass/modules/_content.scss */
 
 .blog .format-aside .entry-title,
 .archive .format-aside .entry-title {
@@ -1681,6 +1681,7 @@ Infinite scroll
 	max-width: 64em;
 	margin-left: auto;
 	margin-right: auto;
+	padding: 0.5em;
 }
 
 /* line 20, /home/luke/Sites/www/reachsupply/htdocs/wp-content/themes/reachsupply/bower_components/bourbon/app/assets/stylesheets/addons/_clearfix.scss */
@@ -1691,13 +1692,13 @@ Infinite scroll
 	display: table;
 }
 
-/* line 10, sass/structure/_layout.scss */
+/* line 14, sass/structure/_layout.scss */
 
 .site-content {
 	margin: 20px auto;
 }
 
-/* line 18, sass/structure/_layout.scss */
+/* line 22, sass/structure/_layout.scss */
 
 #primary {
 	width: 100%;
@@ -1711,13 +1712,13 @@ Infinite scroll
 	display: table;
 }
 
-/* line 29, sass/structure/_layout.scss */
+/* line 33, sass/structure/_layout.scss */
 
 .site-footer .menu {
 	display: none;
 }
 
-/* line 33, sass/structure/_layout.scss */
+/* line 37, sass/structure/_layout.scss */
 
 .site-footer #secondary {
 	margin: 20px auto;
@@ -1744,13 +1745,19 @@ Infinite scroll
 
 @media (min-width: 85.375em) {
 
-/* line 10, sass/structure/_layout.scss */
+/* line 6, sass/structure/_layout.scss */
+
+.container {
+	padding: 0;
+}
+
+/* line 14, sass/structure/_layout.scss */
 
 .site-content {
 	margin: 40px auto 60px;
 }
 
-/* line 18, sass/structure/_layout.scss */
+/* line 22, sass/structure/_layout.scss */
 
 #primary {
 	float: left;
@@ -1765,13 +1772,13 @@ Infinite scroll
 	margin-right: 0;
 }
 
-/* line 33, sass/structure/_layout.scss */
+/* line 37, sass/structure/_layout.scss */
 
 .site-footer #secondary {
 	margin: 40px auto 60px;
 }
 
-/* line 33, sass/structure/_layout.scss */
+/* line 37, sass/structure/_layout.scss */
 
 .site-footer #secondary {
 	float: left;
@@ -1788,20 +1795,63 @@ Infinite scroll
 
 }
 
+@media screen and (max-width: 900px) {
+
+/* line 75, sass/modules/_navigation.scss */
+
+.nav-wrapper a {
+	width: 12em;
+}
+
+}
+
 @media screen and (max-width: 600px) {
 
-/* line 101, sass/modules/_navigation.scss */
+/* line 104, sass/modules/_navigation.scss */
 
-.menu-toggle,
+.nav-wrapper a {
+	width: 100%;
+}
+
+/* line 107, sass/modules/_navigation.scss */
+
+.menu-toggle {
+	text-align: right;
+	padding: .5em;
+}
+
+/* line 111, sass/modules/_navigation.scss */
+
+.anchor-moved a.menu-toggle {
+	background: url("images/logo-lt-blue.svg") no-repeat left 0.5em center;
+	background-size: auto 2em;
+}
+
+/* line 115, sass/modules/_navigation.scss */
+
+.nav-wrapper a.menu-toggle,
 .main-navigation.toggled .nav-menu {
 	display: block;
 }
 
-/* line 106, sass/modules/_navigation.scss */
+/* line 119, sass/modules/_navigation.scss */
 
 .main-navigation ul,
 .main-navigation li.menu-item-home {
 	display: none;
+}
+
+/* line 19, sass/modules/_content.scss */
+
+.entry-title {
+	font-size: 1.5rem;
+}
+
+/* line 65, sass/modules/_home.scss */
+
+.home .site-header-logo > h1 {
+	margin: 35% 0 0 0;
+	font-size: 2em;
 }
 
 }
