--- a/style.css
+++ b/style.css
@@ -1118,9 +1118,10 @@ img {
 .site-header-logo > h1 {
 	font-size: 1em;
 	text-align: center;
+	margin-top: 7em;
 }
 
-/* line 18, sass/modules/_header.scss */
+/* line 19, sass/modules/_header.scss */
 
 .site-header-logo > h1 a {
 	text-transform: uppercase;
@@ -1134,7 +1135,7 @@ img {
 	background-size: 9.75em;
 }
 
-/* line 30, sass/modules/_header.scss */
+/* line 31, sass/modules/_header.scss */
 
 .site-header > nav {
 	background-color: #0B486B;
@@ -1160,15 +1161,9 @@ a:active {
 	color: #0B486B;
 }
 
-/* line 26, sass/modules/_navigation.scss */
+/* line 23, sass/modules/_navigation.scss */
 
-.menu ul li {
-	margin: 0 10px 0 0;
-}
-
-/* line 37, sass/modules/_navigation.scss */
-
-.nav-wrapper .main-navigation {
+.main-navigation {
 	height: auto;
 	width: 100%;
 	clear: both;
@@ -1176,33 +1171,9 @@ a:active {
 	float: left;
 }
 
-/* line 44, sass/modules/_navigation.scss */
+/* line 31, sass/modules/_navigation.scss */
 
-.nav-wrapper ul {
-	list-style: none;
-	margin: 0;
-	padding-left: 0;
-	text-align: center;
-}
-
-/* line 52, sass/modules/_navigation.scss */
-
-.nav-wrapper li {
-	display: inline;
-	text-align: center;
-	width: 100%;
-	line-height: 4em;
-}
-
-/* line 57, sass/modules/_navigation.scss */
-
-.nav-wrapper li:hover > a {
-	background-color: #42839B;
-}
-
-/* line 63, sass/modules/_navigation.scss */
-
-.nav-wrapper a {
+.main-navigation a {
 	display: inline-block;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -1213,35 +1184,60 @@ a:active {
 	font-weight: normal;
 }
 
-/* line 71, sass/modules/_navigation.scss */
+/* line 39, sass/modules/_navigation.scss */
 
-.nav-wrapper a.menu-toggle {
+.main-navigation a.menu-toggle {
 	display: none;
 }
 
-/* line 81, sass/modules/_navigation.scss */
+/* line 49, sass/modules/_navigation.scss */
 
-.nav-wrapper .menu-item-home a {
-	color: transparent;
-	text-indent: -9999px;
+.main-navigation .menu-item-home a {
+	display: none;
 }
 
-/* line 92, sass/modules/_navigation.scss */
+/* line 57, sass/modules/_navigation.scss */
+
+.main-navigation ul {
+	list-style: none;
+	margin: 0;
+	padding-left: 0;
+	text-align: center;
+}
+
+/* line 65, sass/modules/_navigation.scss */
+
+.main-navigation li {
+	display: inline;
+	text-align: center;
+	width: 100%;
+	line-height: 4em;
+}
+
+/* line 70, sass/modules/_navigation.scss */
+
+.main-navigation li:hover > a {
+	background-color: #42839B;
+}
+
+/* line 77, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved {
 	position: fixed;
 	top: 0;
 }
 
-/* line 95, sass/modules/_navigation.scss */
+/* line 80, sass/modules/_navigation.scss */
 
-.anchor.anchor-moved .menu-item-home {
+.anchor.anchor-moved .menu-item-home a {
 	background: url("images/logo-lt-blue.svg") no-repeat center center;
 	background-size: auto 3em;
-	padding: 1em 0 1em 0;
+	display: inline-block;
+	color: transparent;
+	text-indent: -9999px;
 }
 
-/* line 130, sass/modules/_navigation.scss */
+/* line 117, sass/modules/_navigation.scss */
 
 .site-main .comment-navigation,
 .site-main
@@ -1252,7 +1248,7 @@ a:active {
 	overflow: hidden;
 }
 
-/* line 135, sass/modules/_navigation.scss */
+/* line 122, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
@@ -1262,7 +1258,7 @@ a:active {
 	float: left;
 }
 
-/* line 141, sass/modules/_navigation.scss */
+/* line 128, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
@@ -1803,9 +1799,9 @@ Infinite scroll
 
 @media screen and (max-width: 900px) {
 
-/* line 76, sass/modules/_navigation.scss */
+/* line 44, sass/modules/_navigation.scss */
 
-.nav-wrapper a {
+.main-navigation a {
 	width: 12em;
 }
 
@@ -1813,34 +1809,34 @@ Infinite scroll
 
 @media screen and (max-width: 600px) {
 
-/* line 105, sass/modules/_navigation.scss */
+/* line 92, sass/modules/_navigation.scss */
 
 .nav-wrapper a {
 	width: 100%;
 }
 
-/* line 108, sass/modules/_navigation.scss */
+/* line 95, sass/modules/_navigation.scss */
 
 .menu-toggle {
 	text-align: right;
 	padding: .5em;
 }
 
-/* line 112, sass/modules/_navigation.scss */
+/* line 99, sass/modules/_navigation.scss */
 
 .anchor-moved a.menu-toggle {
 	background: url("images/logo-lt-blue.svg") no-repeat left 0.5em center;
 	background-size: auto 2em;
 }
 
-/* line 116, sass/modules/_navigation.scss */
+/* line 103, sass/modules/_navigation.scss */
 
 .nav-wrapper a.menu-toggle,
 .main-navigation.toggled .nav-menu {
 	display: block;
 }
 
-/* line 120, sass/modules/_navigation.scss */
+/* line 107, sass/modules/_navigation.scss */
 
 .main-navigation ul,
 .main-navigation li.menu-item-home {
