--- a/style.css
+++ b/style.css
@@ -1211,23 +1211,29 @@ a:active {
 	display: inline;
 	text-align: center;
 	width: 100%;
-	line-height: 4em;
 }
 
-/* line 70, sass/modules/_navigation.scss */
+/* line 69, sass/modules/_navigation.scss */
+
+.main-navigation li a {
+	line-height: 4em;
+	height: 4em;
+}
+
+/* line 73, sass/modules/_navigation.scss */
 
 .main-navigation li:hover > a {
 	background-color: #42839B;
 }
 
-/* line 77, sass/modules/_navigation.scss */
+/* line 80, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved {
 	position: fixed;
 	top: 0;
 }
 
-/* line 80, sass/modules/_navigation.scss */
+/* line 83, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved .menu-item-home a {
 	background: url("images/logo-lt-blue.svg") no-repeat center center;
@@ -1237,7 +1243,15 @@ a:active {
 	text-indent: -9999px;
 }
 
-/* line 117, sass/modules/_navigation.scss */
+/* line 89, sass/modules/_navigation.scss */
+
+.anchor.anchor-moved .menu-item-home a:hover {
+	background: url("images/logo-dk-blue.svg") no-repeat center center;
+	background-size: auto 3em;
+	background-color: #42839B;
+}
+
+/* line 125, sass/modules/_navigation.scss */
 
 .site-main .comment-navigation,
 .site-main
@@ -1248,7 +1262,7 @@ a:active {
 	overflow: hidden;
 }
 
-/* line 122, sass/modules/_navigation.scss */
+/* line 130, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
@@ -1258,7 +1272,7 @@ a:active {
 	float: left;
 }
 
-/* line 128, sass/modules/_navigation.scss */
+/* line 136, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
@@ -1809,34 +1823,34 @@ Infinite scroll
 
 @media screen and (max-width: 600px) {
 
-/* line 92, sass/modules/_navigation.scss */
+/* line 100, sass/modules/_navigation.scss */
 
 .nav-wrapper a {
 	width: 100%;
 }
 
-/* line 95, sass/modules/_navigation.scss */
+/* line 103, sass/modules/_navigation.scss */
 
 .menu-toggle {
 	text-align: right;
 	padding: .5em;
 }
 
-/* line 99, sass/modules/_navigation.scss */
+/* line 107, sass/modules/_navigation.scss */
 
 .anchor-moved a.menu-toggle {
 	background: url("images/logo-lt-blue.svg") no-repeat left 0.5em center;
 	background-size: auto 2em;
 }
 
-/* line 103, sass/modules/_navigation.scss */
+/* line 111, sass/modules/_navigation.scss */
 
 .nav-wrapper a.menu-toggle,
 .main-navigation.toggled .nav-menu {
 	display: block;
 }
 
-/* line 107, sass/modules/_navigation.scss */
+/* line 115, sass/modules/_navigation.scss */
 
 .main-navigation ul,
 .main-navigation li.menu-item-home {
