--- a/sass/utilities/variables/_colors.scss
+++ b/sass/utilities/variables/_colors.scss
@@ -9,8 +9,10 @@ $blackberry: #341127;
 $red: #80061C;
 
 $color-background-header: $dark-blue;
+$color-transparent-header: rgba($color-background-header, 0.95);
 $color-background-body: #fff;
 $color-background-home: $light-blue;
+$color-transparent-home: rgba($color-background-home, 0.5);
 $color-background-screen-reader: #f1f1f1;
 $color-background-hr: #ccc;
 $color-background-button: #e6e6e6;
