--- a/style.css
+++ b/style.css
@@ -1138,7 +1138,7 @@ img {
 /* line 31, sass/modules/_header.scss */
 
 .site-header > nav {
-	background-color: #0B486B;
+	background-color: rgba(11, 72, 107, 0.95);
 }
 
 /* line 7, sass/modules/_navigation.scss */
@@ -1218,22 +1218,23 @@ a:active {
 .main-navigation li a {
 	line-height: 4em;
 	height: 4em;
+	padding-top: .1em;
 }
 
-/* line 73, sass/modules/_navigation.scss */
+/* line 74, sass/modules/_navigation.scss */
 
 .main-navigation li:hover > a {
-	background-color: #42839B;
+	background-color: rgba(66, 131, 155, 0.5);
 }
 
-/* line 80, sass/modules/_navigation.scss */
+/* line 81, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved {
 	position: fixed;
 	top: 0;
 }
 
-/* line 83, sass/modules/_navigation.scss */
+/* line 84, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved .menu-item-home a {
 	background: url("images/logo-lt-blue.svg") no-repeat center center;
@@ -1243,15 +1244,15 @@ a:active {
 	text-indent: -9999px;
 }
 
-/* line 89, sass/modules/_navigation.scss */
+/* line 90, sass/modules/_navigation.scss */
 
 .anchor.anchor-moved .menu-item-home a:hover {
 	background: url("images/logo-dk-blue.svg") no-repeat center center;
 	background-size: auto 3em;
-	background-color: #42839B;
+	background-color: rgba(66, 131, 155, 0.5);
 }
 
-/* line 125, sass/modules/_navigation.scss */
+/* line 126, sass/modules/_navigation.scss */
 
 .site-main .comment-navigation,
 .site-main
@@ -1262,7 +1263,7 @@ a:active {
 	overflow: hidden;
 }
 
-/* line 130, sass/modules/_navigation.scss */
+/* line 131, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
@@ -1272,7 +1273,7 @@ a:active {
 	float: left;
 }
 
-/* line 136, sass/modules/_navigation.scss */
+/* line 137, sass/modules/_navigation.scss */
 
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
@@ -1823,34 +1824,34 @@ Infinite scroll
 
 @media screen and (max-width: 600px) {
 
-/* line 100, sass/modules/_navigation.scss */
+/* line 101, sass/modules/_navigation.scss */
 
 .nav-wrapper a {
 	width: 100%;
 }
 
-/* line 103, sass/modules/_navigation.scss */
+/* line 104, sass/modules/_navigation.scss */
 
 .menu-toggle {
 	text-align: right;
 	padding: .5em;
 }
 
-/* line 107, sass/modules/_navigation.scss */
+/* line 108, sass/modules/_navigation.scss */
 
 .anchor-moved a.menu-toggle {
 	background: url("images/logo-lt-blue.svg") no-repeat left 0.5em center;
 	background-size: auto 2em;
 }
 
-/* line 111, sass/modules/_navigation.scss */
+/* line 112, sass/modules/_navigation.scss */
 
 .nav-wrapper a.menu-toggle,
 .main-navigation.toggled .nav-menu {
 	display: block;
 }
 
-/* line 115, sass/modules/_navigation.scss */
+/* line 116, sass/modules/_navigation.scss */
 
 .main-navigation ul,
 .main-navigation li.menu-item-home {
